[package]
name = "hz-to-mm0"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
bitvec = "0.22"
tokio = { version = "1.10", features = ["rt", "rt-multi-thread", "sync", "time"] }
mm0_util = "0.1"
mm0b_parser = "0.1"
